# habit-tracker-bot

./: .env.template  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 9107e313caf3_create_users_habits_and_habit_logs.py
backend/app/: main.py
backend/app/api/: auth.py  dependencies.py  habits.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  habit.py  habit_log.py  user.py
backend/app/schemas/: __init__.py  habit.py  user.py
backend/app/services/: habit.py  password.py  token.py  user.py
bot/: api_client.py  main.py  pyproject.toml
bot/config/: settings.py
bot/handlers/: common.py  habits.py
bot/services/: api_client.py  auth_service.py  habit_service.py
bot/storage/: token_storage.py
notifier/: main.py  pyproject.toml
