[tool.poetry]
name = "habit-tracker-backend"
version = "0.1.0"
description = "FastAPI backend for habit tracker bot"
authors = ["Aleksandr <aleksandr@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
pydantic-settings = "^2.7.0"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"